--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,3 +1,18 @@
 @import "~bootstrap/scss/bootstrap";
 
 
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+
+.jumbotron {
+    background-image: url('../img/jumbotron.jpg');
+    background-size: cover;
+
+}
